--- a/web/src/nlp.html
+++ b/web/src/nlp.html
@@ -13,11 +13,10 @@ title: Smile - NLP
         and services that are able to understand human languages. Advanced
         high level NLP tasks include speech recognition, machine translation,
         natural language understanding, natural language generation,
-        dialog system, etc. In Smile, we focus on low and intermediate level
-        NLP tasks such as sentence breaking, stemming, n-gram, part-of-speech
-        recognition, keyword detection, named entity recognition, etc.
-        Statistical natural language processing relies heavily on machine
-        learning.</p>
+        dialog system, etc. While smile-deep module supports LLMs, smile-nlp
+        module focuses on low and intermediate level NLP tasks such as
+        sentence breaking, stemming, n-gram, part-of-speech recognition,
+        keyword detection, named entity recognition, etc.</p>
 
     <h2 id="normalization" class="title">Normalization</h2>
 
