--- a/web/src/overview.html
+++ b/web/src/overview.html
@@ -1,7 +1,7 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
-title: Smile - Overview
+title: Smile - ML Overview
 ---
 {% include "toc.njk" %}
 
