--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,6 +7,9 @@ title: Smile - Home
   <div class="news" style="margin-bottom: 20px;">
     <h5>Latest News</h5>
     <ul class="list-unstyled">
+      <li><a href="https://github.com/haifengl/smile/releases/tag/v4.0.0">Smile 4.0.0 Released!</a>
+        <span class="small">(Aug 3rd, 2024)</span></li>
+
       <li><a href="https://github.com/haifengl/smile/releases/tag/v3.1.1">Smile 3.1.1 Released!</a>
         <span class="small">(May 22, 2024)</span></li>
 
