--- a/web/src/quickstart.html
+++ b/web/src/quickstart.html
@@ -402,6 +402,352 @@ smile>
         </div>
     </div>
 
+    <h3 id="cli">Training and Inference CLI</h3>
+
+    <p>A secret functionality of Smile shell is that it can be used for training and
+        inference through command line (CLI).</p>
+
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#training_1" data-toggle="tab">Training</a></li>
+        <li><a href="#predict_1" data-toggle="tab">Batch Inference</a></li>
+        <li><a href="#serve_1" data-toggle="tab">Online Serving</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="training_1">
+            <div class="code" style="text-align: left;">
+                <pre class="prettyprint lang-shell"><code>
+$ bin/smile train
+Smile 4.0.0
+Usage: smile train [random_forest|gradient_boost|adaboost|cart|logistic|fisher|lda|qda|rda|mlp|svm|rbf|ols|lasso|ridge|elastic_net|gaussian_process] [options]
+
+  --formula &lt;class ~ .&gt;    The model formula
+  --data &lt;file&gt;            The training data file
+  --test &lt;file&gt;            The optional test data file
+  --model &lt;file&gt;           The model file to save
+  --format &lt;csv,header=true,delimiter=\t,comment=#,escape=\,quote=&quot;&gt;
+                           The data file format
+  --kfold &lt;value&gt;          The k-fold cross validation
+  --round &lt;value&gt;          The number of rounds of repeated cross validation
+  --ensemble               Ensemble cross validation models
+  --seed &lt;value&gt;           The random number generator seed
+Command: random_forest [options]
+Random Forest
+  --regression             To train a regression model
+  --trees &lt;value&gt;          The number of trees
+  --mtry &lt;value&gt;           The number of features to train node split
+  --split &lt;GINI, ENTROPY, CLASSIFICATION_ERROR&gt;
+                           The split rule
+  --max_depth &lt;value&gt;      The maximum tree depth
+  --max_nodes &lt;value&gt;      The maximum number of leaf nodes
+  --node_size &lt;value&gt;      The minimum leaf node size
+  --sampling &lt;value&gt;       The sampling rate
+  --class_weight &lt;value&gt;   The class weights
+Command: gradient_boost [options]
+Gradient Boosting
+  --regression             To train a regression model
+  --trees &lt;value&gt;          The number of trees
+  --shrinkage &lt;value&gt;      The shrinkage parameter in (0, 1] controls the learning rate
+  --max_depth &lt;value&gt;      The maximum tree depth
+  --max_nodes &lt;value&gt;      The maximum number of leaf nodes
+  --node_size &lt;value&gt;      The minimum leaf node size
+  --sampling &lt;value&gt;       The sampling rate
+Command: adaboost [options]
+AdaBoost
+  --trees &lt;value&gt;          The number of trees
+  --max_depth &lt;value&gt;      The maximum tree depth
+  --max_nodes &lt;value&gt;      The maximum number of leaf nodes
+  --node_size &lt;value&gt;      The minimum leaf node size
+Command: cart [options]
+Classification and Regression Tree
+  --regression             To train a regression model
+  --split &lt;GINI, ENTROPY, CLASSIFICATION_ERROR>
+                           The split rule
+  --max_depth &lt;value&gt;      The maximum tree depth
+  --max_nodes &lt;value&gt;      The maximum number of leaf nodes
+  --node_size &lt;value&gt;      The minimum leaf node size
+Command: logistic [options]
+Logistic Regression
+  --transform &lt;standardizer, winsor(0.01,0.99), minmax, MaxAbs, L1, L2, Linf&gt;
+                           The feature transformation
+  --lambda &lt;value&gt;         The regularization on linear weights
+  --iterations &lt;value&gt;     The maximum number of iterations
+  --tolerance &lt;value&gt;      The tolerance to stop iterations
+Command: fisher [options]
+Fisher Linear Discriminant
+  --transform &lt;standardizer, winsor(0.01,0.99), minmax, MaxAbs, L1, L2, Linf&gt;
+                           The feature transformation
+  --dimension &lt;value&gt;      The dimensionality of mapped space
+  --tolerance &lt;value&gt;      The tolerance if a covariance matrix is singular
+Command: lda [options]
+Linear Discriminant Analysis
+  --transform &lt;standardizer, winsor(0.01,0.99), minmax, MaxAbs, L1, L2, Linf&gt;
+                           The feature transformation
+  --priori &lt;value&gt;         The priori probability of each class
+  --tolerance &lt;value&gt;      The tolerance if a covariance matrix is singular
+Command: qda [options]
+Quadratic Discriminant Analysis
+  --transform &lt;standardizer, winsor(0.01,0.99), minmax, MaxAbs, L1, L2, Linf&gt;
+                           The feature transformation
+  --priori &lt;value&gt;         The priori probability of each class
+  --tolerance &lt;value&gt;      The tolerance if a covariance matrix is singular
+Command: rda [options]
+Regularized Discriminant Analysis
+  --transform &lt;standardizer, winsor(0.01,0.99), minmax, MaxAbs, L1, L2, Linf&gt;
+                           The feature transformation
+  --alpha &lt;value&gt;          The regularization factor in [0, 1] allows a continuum of models between LDA and QDA
+  --priori &lt;value&gt;         The priori probability of each class
+  --tolerance &lt;value&gt;      The tolerance if a covariance matrix is singular
+Command: mlp [options]
+Multilayer Perceptron
+  --regression             To train a regression model
+  --transform &lt;standardizer, winsor(0.01,0.99), minmax, MaxAbs, L1, L2, Linf&gt;
+                           The feature transformation
+  --layers &lt;ReLU(100)|Sigmoid(30)&gt;
+                           The neural network layers
+  --epochs &lt;value&gt;         The number of training epochs
+  --mini_batch &lt;value&gt;     The split rule
+  --learning_rate &lt;0.01, linear(0.01, 10000, 0.001), piecewise(...), polynomial(...), inverse(...), exp(...)&gt;
+                           The learning rate schedule
+  --momentum &lt;value&gt;       The momentum schedule
+  --weight_decay &lt;value&gt;   The weight decay
+  --clip_norm &lt;value&gt;      The gradient clipping norm
+  --clip_value &lt;value&gt;     The gradient clipping value
+  --rho &lt;value&gt;            RMSProp rho
+  --epsilon &lt;value&gt;        RMSProp epsilon
+Command: svm [options]
+Support Vector Machine
+  --transform &lt;standardizer, winsor(0.01,0.99), minmax, MaxAbs, L1, L2, Linf&gt;
+                           The feature transformation
+  --kernel &lt;value&gt;         The kernel function
+  --C &lt;value&gt;              The soft margin penalty parameter
+  --epsilon &lt;value&gt;        The parameter of epsilon-insensitive hinge loss
+  --ovr                    One vs Rest strategy for multiclass classification
+  --ovo                    One vs One strategy for multiclass classification
+  --tolerance &lt;value&gt;      The tolerance of convergence test
+Command: rbf [options]
+Radial Basis Function Network
+  --regression             To train a regression model
+  --transform &lt;standardizer, winsor(0.01,0.99), minmax, MaxAbs, L1, L2, Linf>
+                           The feature transformation
+  --neurons &lt;value&gt;        The number of neurons (radial basis functions)
+  --normalize              Normalized RBF network
+Command: ols [options]
+Ordinary Least Squares
+  --method &lt;qr, svd&gt;       The fitting method
+  --stderr                 Compute the standard errors of the estimate of parameters.
+  --recursive              Recursive least squares
+Command: lasso [options]
+LASSO - Least Absolute Shrinkage and Selection Operator
+  --lambda &lt;value&gt;         The regularization on linear weights
+  --iterations &lt;value&gt;     The maximum number of iterations
+  --tolerance &lt;value&gt;      The tolerance to stop iterations (relative target duality gap)
+Command: ridge [options]
+Ridge Regression
+  --lambda &lt;value&gt;         The regularization on linear weights
+Command: elastic_net [options]
+Elastic Net
+  --lambda1 &lt;value&gt;        The L1 regularization on linear weights
+  --lambda2 &lt;value&gt;        The L2 regularization on linear weights
+  --iterations &lt;value&gt;     The maximum number of iterations
+  --tolerance &lt;value&gt;      The tolerance to stop iterations (relative target duality gap)
+Command: gaussian_process [options]
+Gaussian Process Regression
+  --transform &lt;standardizer, winsor(0.01,0.99), minmax, MaxAbs, L1, L2, Linf&gt;
+                           The feature transformation
+  --kernel &lt;value&gt;         The kernel function
+  --noise &lt;value&gt;          The noise variance
+  --normalize              Normalize the response variable
+  --iterations &lt;value&gt;     The maximum number of HPO iterations
+  --tolerance &lt;value&gt;      The stopping tolerance for HPO
+          </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="predict_1">
+            <div class="code" style="text-align: left;">
+                <pre class="prettyprint lang-shell"><code>
+$ bin/smile predict
+Smile 4.0.0
+Usage: smile predict [options]
+
+  --model &lt;value&gt;   The model file
+  --data &lt;value&gt;    The data file
+  --format &lt;value&gt;  The data file format/schema
+  --probability     Output the posteriori probabilities for soft classifier
+
+    </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="serve_1">
+            <div class="code" style="text-align: left;">
+                <pre class="prettyprint lang-shell"><code>
+$ bin/smile serve
+Smile 4.0.0
+Usage: smile serve [options]
+
+  --model &lt;value&gt;  The model file
+  --probability    Output the posteriori probabilities for soft classifier
+    </code></pre>
+            </div>
+        </div>
+    </div>
+
+    <p>To train a model, one should specify the data file, the output model file,
+        the machine learning algorithm and its hyperparameters, and the model formula.
+        Once the training done, it also prints the training metrics on the console.
+        If the optional test data is provided too, the validation metrics will be
+        computed too.</p>
+
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#train_2" data-toggle="tab">Training</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="train_2">
+            <div class="code" style="text-align: left;">
+    <pre class="prettyprint lang-shell"><code>
+$ bin/smile train random_forest --data data/weka/iris.arff --formula "class ~ ." --model iris_random_forest.model
+[main] INFO smile.io.Arff - Read ARFF relation iris
+[ForkJoinPool.commonPool-worker-3] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 88.89%
+[ForkJoinPool.commonPool-worker-2] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 95.35%
+[ForkJoinPool.commonPool-worker-1] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 96.67%
+...
+[main] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 92.73%
+[ForkJoinPool.commonPool-worker-3] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 94.44%
+[main] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 92.98%
+[ForkJoinPool.commonPool-worker-3] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 92.31%
+[main] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 95.00%
+[ForkJoinPool.commonPool-worker-3] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 96.30%
+[main] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 89.47%
+[ForkJoinPool.commonPool-worker-3] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 92.98%
+[main] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 92.45%
+[ForkJoinPool.commonPool-worker-3] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 96.30%
+[main] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 89.83%
+[ForkJoinPool.commonPool-worker-3] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 90.57%
+[main] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 94.64%
+[main] INFO smile.classification.RandomForest - Decision tree OOB accuracy: 97.92%
+Training metrics: {
+  fit time: 191.678 ms,
+  score time: 17.059 ms,
+  validation data size: 150,
+  error: 6,
+  accuracy: 96.00%,
+  cross entropy: 0.1316
+}
+  </code></pre>
+            </div>
+        </div>
+    </div>
+
+    <p>To run a batch inference on a file, do the following. In this example,
+        we specify the option <code>--probability</code> to compute the posteri probability.
+        If you don't need it, simply skip this option.</p>
+
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#predict_2" data-toggle="tab">Batch Inference</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="predict_2">
+            <div class="code" style="text-align: left;">
+    <pre class="prettyprint lang-shell"><code>
+$ bin/smile predict --model iris_random_forest.model --data data/weka/iris.arff --probability
+0 [0.9599005925578108, 0.0205362892965633, 0.01956311814562593]
+0 [0.9591845549270528, 0.020962057229598156, 0.01985338784334913]
+0 [0.959796981740008, 0.02072034636162096, 0.019482671898371082]
+0 [0.959796981740008, 0.02072034636162096, 0.019482671898371082]
+0 [0.9598769149423004, 0.020548128104318476, 0.0195749569533811]
+0 [0.9583053192555514, 0.021164037082801724, 0.020530643661646933]
+0 [0.9598769149423004, 0.020548128104318476, 0.0195749569533811]
+0 [0.9598769149423004, 0.020548128104318476, 0.0195749569533811]
+0 [0.9591845549270528, 0.020962057229598156, 0.01985338784334913]
+0 [0.959796981740008, 0.02072034636162096, 0.019482671898371082]
+0 [0.9583053192555514, 0.021164037082801724, 0.020530643661646933]
+0 [0.9598769149423004, 0.020548128104318476, 0.0195749569533811]
+0 [0.9591845549270528, 0.020962057229598156, 0.01985338784334913]
+0 [0.9591845549270528, 0.020962057229598156, 0.01985338784334913]
+0 [0.9027507265438325, 0.07089506779135216, 0.026354205664815347]
+0 [0.911215084168623, 0.0632270620116508, 0.025557853819726185]
+0 [0.9583053192555514, 0.021164037082801724, 0.020530643661646933]
+0 [0.9599005925578108, 0.0205362892965633, 0.01956311814562593]
+0 [0.911215084168623, 0.0632270620116508, 0.025557853819726185]
+...
+  </code></pre>
+            </div>
+        </div>
+    </div>
+
+    <p>It is also easy to create an endpoint to serve online request.</p>
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#serve_2" data-toggle="tab">Online Serving</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="serve_2">
+            <div class="code" style="text-align: left;">
+    <pre class="prettyprint lang-shell"><code>
+$ bin/smile serve --model iris_random_forest.model --probability
+[smile-akka.actor.default-dispatcher-4] INFO akka.event.slf4j.Slf4jLogger - Slf4jLogger started
+Smile online at http://localhost:8080/
+Press RETURN to stop...
+  </code></pre>
+            </div>
+        </div>
+    </div>
+
+    <p>The endpoint is at <code>/v1/infer</code>. Here is an example how to make an inference request.</p>
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#serve_3" data-toggle="tab">Online Serving</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="serve_3">
+            <div class="code" style="text-align: left;">
+    <pre class="prettyprint lang-shell"><code>
+$ curl -X POST http://localhost:8080/v1/infer -H "Content-Type: application/json" \
+        -d '{
+          "sepallength": 5.1,
+          "sepalwidth": 3.5,
+          "petallength": 1.4,
+          "petalwidth": 0.2
+        }'
+[{"class":0,"probability":[0.9599005925578108,0.0205362892965633,0.01956311814562593]}]
+  </code></pre>
+            </div>
+        </div>
+    </div>
+
+    <p>To infer on multiple samples, simply provides a JSON array in the request body.</p>
+
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#serve_4" data-toggle="tab">Online Serving</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="serve_4">
+            <div class="code" style="text-align: left;">
+    <pre class="prettyprint lang-shell"><code>
+$ curl -X POST http://localhost:8080/v1/infer -H "Content-Type: application/json" \
+        -d '[
+          {
+            "sepallength": 5.1,
+            "sepalwidth": 3.5,
+            "petallength": 1.4,
+            "petalwidth": 0.2
+          },
+          {
+            "sepallength": 6.3,
+            "sepalwidth": 3.3,
+            "petallength": 6.0,
+            "petalwidth": 2.5
+          }
+        ]'
+[{"class":0,"probability":[0.9599005925578108,0.0205362892965633,0.01956311814562593]},
+ {"class":2,"probability":[0.023727657781681327,0.051035220743102516,0.9252371214752161]}]
+  </code></pre>
+            </div>
+        </div>
+    </div>
+
+    <p>By default, SmileServe binds at localhost:8080. If you prefer a different port and/or
+        want to expose the server to other hosts, you may set the binding interface and port
+        with <code>-J-Dakka.http.server.interface=0.0.0.0</code> and
+        <code>-J-Dakka.http.server.port=8000</code>, for example.</p>
+
     <h2 id="notebook">Notebooks</h2>
 
     <p>You can also use Smile in your favorite Notebook.
@@ -417,6 +763,12 @@ smile>
         code to the notebook. We provide many notebook examples in
         the <code>notebooks</code> directory.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#notebook_1" data-toggle="tab">Scala</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="notebook_1">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     import $ivy.`com.github.haifengl::smile-scala:4.0.0`
 
@@ -455,22 +807,43 @@ smile>
     import smile.nlp._
     import smile.wavelet._
     </code></pre>
+            </div>
+        </div>
+    </div>
 
     <p>To plot data with Swing based functions in Notebook, run the below code first.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#notebook_2" data-toggle="tab">Scala</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="notebook_2">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     import smile.plot.swing._
     import smile.plot.show
     import smile.plot.Render._
     </code></pre>
+            </div>
+        </div>
+    </div>
 
     <p>To use Vega based plot functions in Notebook, run the below code instead.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#notebook_3" data-toggle="tab">Scala</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="notebook_3">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     import smile.plot.vega._
     import smile.plot.show
     import smile.plot.Render._
     </code></pre>
+            </div>
+        </div>
+    </div>
 
     <h2 id="tutorial">A Gentle Example</h2>
 
